# django-limuza-qa

./: .dockerignore  .env.sample  .gitignore  Dockerfile  build.css  docker-compose.yml  fly.toml  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  readme.md  requirements.txt  seed.py  setup.cfg  startup.py  tailwind.config.js
.devcontainer/: devcontainer.json
apps/: conftest.py  test_utils.py
apps/accounts/tests/: fixtures.py
apps/callibrations/: apps.py
apps/customer_accounts/: adapter.py  admin.py  apps.py  middleware.py  services.py  test_utils.py  urls.py
apps/customer_accounts/fixtures/: accounts.json
apps/customer_accounts/forms/: __init__.py  admin_forms.py  (+1 more)
apps/reviews/: admin.py  forms.py  models.py  tasks.py  urls.py
apps/tickets/: __init__.py  admin.py  apps.py  forms.py  services.py  signals.py  urls.py
customizations/vscode/: extensions.json
docs/: accounts.md  behaviours.txt  fixtures.md  migrations_cheat_sheet.md  roles.md  wanted_erd.txt
limuza/: asgi.py  celery.py  possilbe reset.sh  settings.py  test_settings.py  urls.py  views.py  wsgi.py
limuza/data/: chats.json  tickets.json
scripts/: initialise_data.py
static/: logo.gg
static/css/: output.css
static/js/: area1.js  donut1.js  fetchTickets.js  main.js
static/src/: input.css  output.css
templates/: base.html  side_navbar origin.html  side_navbar.html  top_navbar.html
templates/account/: login.html  password_reset.html  password_reset_dont.html  password_set.html  signup.html  verification_email_required.html  verification_sent.html
(+98 files in other folders)
